--- a/index.html
+++ b/index.html
@@ -9,32 +9,30 @@
   <!-- Google Font Link Method -->
   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet"> -->
   
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <img src="./images/image-qr-code.png" alt="Qr Code">
-      <div class="text">
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  <main>
+    <div class="container">
+      <div class="card">
+        <img src="./images/image-qr-code.png" alt="QR code to frontendmentor.io">
+        <div class="text">
+          <!-- visually hidden for screen readers -->
+          <h1 class="visually-hidden">Improve your front-end skills by building projects</h1>
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        </div>
       </div>
     </div>
+  </main>
+  <footer>
     <div class="attribution">
       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Rainier Diaz.</a></p>
     </div>
-  </div>
-
- 
+  </footer>
 </body>
 </html>
